--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,12 @@ span {
 /*producthardware.html*/
 
 #imgproducthardware{
-    height: 240px;
+  height: 240px;
   width: 240px;
+  float: left;
+  margin-right: 2%;
+}
+
+.producthardware{
+  background: #E0EFDA
 }
