--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 .center{
 	max-width: 1000px;
 	margin: 0 auto;
+  height: 100%;
 }
 
 .sidenav {
@@ -66,7 +67,6 @@ span {
 	
 }
 .items {
-	
 	display: grid;
 	grid-template-areas: 
 	'a b c';
@@ -102,6 +102,14 @@ span {
   background: #E0EFDA;
 }
 
+#pricehardware{
+  text-align: right;
+  font-size: 20px;
+  text-decoration: underline;
+}
+
+
+
 /*productsoftware.html*/
 
 #imgproductsoftware{
@@ -111,4 +119,5 @@ span {
 }
 
 .productsoftware{
-  background: #E0EFDA;}
+  background: #E0EFDA;
+}
