--- a/css/style.css
+++ b/css/style.css
@@ -121,3 +121,9 @@ span {
 .productsoftware{
   background: #E0EFDA;
 }
+
+#pricesoftware{
+   text-align: right;
+  font-size: 20px;
+  text-decoration: underline;
+}
