--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,6 @@
 .center{
 	max-width: 1000px;
 	margin: 0 auto;
-  height: 100%;
 }
 
 .sidenav {
@@ -100,6 +99,7 @@ span {
 
 .producthardware{
   background: #E0EFDA;
+  height: 290px;
 }
 
 #pricehardware{
@@ -120,10 +120,11 @@ span {
 
 .productsoftware{
   background: #E0EFDA;
+  height: 290px;
 }
 
 #pricesoftware{
-   text-align: right;
+  text-align: right;
   font-size: 20px;
   text-decoration: underline;
 }
