--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,12 @@ span {
 }
 
 /*shop.html*/
+#title{
+  text-align: center;
+  font-size: 35px;
+  text-decoration: underline;
+}
+
 .items p {
 	margin: 5px;
 }
@@ -99,7 +105,6 @@ span {
 
 .producthardware{
   background: #E0EFDA;
-  height: 290px;
 }
 
 #pricehardware{
