--- a/css/style.css
+++ b/css/style.css
@@ -149,7 +149,7 @@ opacity:0;
 }
 
 .producthardware{
-  background: #E0EFDA;
+  background: #D8D8D8FF;
 }
 
 #pricehardware{
@@ -169,7 +169,7 @@ opacity:0;
 }
 
 .productsoftware{
-  background: #E0EFDA;
+  background: #D8D8D8FF;
   height: 290px;
 }
 
