--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ header{
    left: 0;
    bottom: 0;
    width: 100%;
-   background-color: #D8D8D8FF;
+   background-color: #C9C9C9FF;
    color: #000;
    text-align: center;
 }
@@ -212,10 +212,10 @@ opacity:0;
   padding-left: 20px;
 }
 
-.repdescription{
+.description{
   margin-top: 15px;
 }
 
-.repdescription h3{
+.description h3{
   padding: 3px;
 }
